# learn_rust

./: README.md
rust_helloworld_1/: Cargo.toml  README.md
sqlx_postgresql/: Cargo.toml  README.md  preparation.sql
sqlx_postgresql/.sqlx/: query-3de1031c81e110b6d18a80724e801fe31993f74e44d52b3e723cb0ebfa71f458.json
sqlx_postgresql/src/: main.rs
sqlx_postgresql_migration/: Cargo.toml  README.md
sqlx_postgresql_migration/migrations/: 20240305130235_create_example_table.sql
sqlx_postgresql_store/: Cargo.toml  Makefile  README.md  preparation.sql
sqlx_postgresql_store/src/: main.rs
sqlx_postgresql_ulid/: Cargo.toml  Makefile.toml  README.md  preparation.sql  ulid.sql
sqlx_postgresql_ulid/src/: main.rs
