[package]
name = "sqlx_postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15"
ulid = "0.4"
chrono = "0.4.34"
uuid = "1.7.0"
