[package]
name = "sqlx_postgresql_ulid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-make = "0.37.10"
chrono = "0.4.35"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["postgres", "tls-native-tls", "runtime-tokio", "chrono" ] }
tokio = { version = "1.36.0", features = ["full"] }
ulid = "1.1.2"
